--- a/src/main/resources/templates/blogDetails.html
+++ b/src/main/resources/templates/blogDetails.html
@@ -73,11 +73,11 @@
                     　　<p>电影总是很仁慈，能让错过的人再一次相遇，生活就不一样了，说过再见的人就再也不见了。没有结局的故事太多，你要习惯相遇和别离。</p>
                     　　<p>有人说分手之后经常走着走着就哭了，听到某首歌就会伤心痛哭;有人说满脑子都是前任，遇到异性都会想起前任;甚至对方早已成为自己身体的一部分，分手之后感觉身体都像是被掏空了 。</p>
                 </div>
-                <!--                标签-->
+                <!--标签-->
                 <div class="m-padded-lr-responsive">
                     <div class="ui basic teal left pointing label">方法论</div>
                 </div>
-                <!--                赞赏-->
+                <!--赞赏-->
                 <div class="ui center aligned basic segment">
                     <button id="payButton" class="ui orange basic circular button">赞赏</button>
                 </div>
@@ -150,8 +150,11 @@
         </div>
 
     </footer>
-<script type="application/javascript" src="../webjars/jquery/1.6.0/jquery.js"></script>
-<script type="application/javascript" src="../webjars/Semantic-UI/2.4.1/semantic.min.css"></script>
+
+<script type="application/javascript" src="../webjars/jquery/3.5.1/dist/jquery.js"></script>
+<!--<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>-->
+<script type="application/javascript" src="../webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
+
 <script>
     $('#button').click(function () {
         $('.nav-item').toggleClass('m-mobile-hide')
