--- a/src/main/resources/static/css/diy.css
+++ b/src/main/resources/static/css/diy.css
@@ -60,7 +60,12 @@
     margin-top: 0.3em !important;
     margin-bottom: 0.3em !important;
 }
-
+.m-margin-button-small{
+    margin-bottom: 0.5em !important;
+}
+.m-margin-button-mini{
+    margin-bottom: 0.2em !important;
+}
 .m-black {
     color: #333 !important;
 }
@@ -91,13 +96,25 @@
     max-width: 72em !important;
     margin: auto !important;
 }
+.m-padded-lr-responsive{
+    padding-left: 4em!important;
+    padding-right: 4em!important;
+}
 @media screen and (max-width: 768px){
     .m-mobile-hide{
         display: none!important;
+    }
+    .m-padded-lr-responsive{
+        padding-left: 0!important;
+        padding-right: 0!important;
+    }
+    .m-mobile-wide{
+        width: 100% !important;
     }
 }
 @media screen and (min-width: 769px){
     .m-pc-hide{
         display: none!important;
     }
+
 }
