--- a/src/main/resources/templates/blogDetails.html
+++ b/src/main/resources/templates/blogDetails.html
@@ -9,26 +9,26 @@
 </head>
 <body>
 <!--导航栏-->
-    <nav class="ui inverted attached segment m-padded-tb-mini">
-        <div class="ui container">
-            <div class="ui inverted secondary stackable menu">
-                <h2 class="ui teal header item">Blog</h2>
-                <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="home icon"></i>首页</a>
-                <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="idea icon"></i>分类</a>
-                <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="tags icon"></i>标签</a>
-                <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="info icon"></i>关于我</a>
-                <div class="right item m-mobile-hide">
-                   <div class="ui icon inverted transparent input">
-                       <input type="text" placeholder="Search...">
-                       <i class="search link icon"></i>
-                   </div>
+<nav class="ui inverted attached segment m-padded-tb-mini">
+    <div class="ui container">
+        <div class="ui inverted secondary stackable menu">
+            <h2 class="ui teal header item">Blog</h2>
+            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="home icon"></i>首页</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="idea icon"></i>分类</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="tags icon"></i>标签</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="info icon"></i>关于我</a>
+            <div class="right item m-mobile-hide">
+                <div class="ui icon inverted transparent input">
+                    <input type="text" placeholder="Search...">
+                    <i class="search link icon"></i>
                 </div>
             </div>
         </div>
-        <a href="javascript:;" id="button" class="ui menu black button icon m-top-right m-pc-hide">
-            <i class="sidebar icon"></i>
-        </a>
-    </nav>
+    </div>
+    <a href="javascript:;" id="button" class="ui menu black button icon m-top-right m-pc-hide">
+        <i class="sidebar icon"></i>
+    </a>
+</nav>
 <!--中间内容-->
 <div class="m-container-small m-padded-tb-big animated fadeIn">
     <div class="ui container">
@@ -37,7 +37,7 @@
                 <div class="ui horizontal link list">
                     <div class="item">
                         <img src="https://unsplash.it/100/100?image=1005"
-                              alt="" class="ui avatar image">
+                             alt="" class="ui avatar image">
                         <div class="content"><a href="#" class="header">崔崔崔</a></div>
                     </div>
                     <div class="item">
@@ -85,11 +85,13 @@
                     <div class="ui orange basic label">
                         <div class="ui images" style="font-size: inherit!important;">
                             <div class="image">
-                                <img src="/images/zhiFBM.jpg" alt="" class="ui rounded bordered image" style="width: 120px">
+                                <img src="/images/zhiFBM.jpg" alt="" class="ui rounded bordered image"
+                                     style="width: 120px">
                                 <div>支付宝支付</div>
                             </div>
                             <div class="image">
-                                <img src="/images/wechatM.jpg" alt="" class="ui rounded bordered image" style="width: 120px">
+                                <img src="/images/wechatM.jpg" alt="" class="ui rounded bordered image"
+                                     style="width: 120px">
                                 <div>微信支付</div>
                             </div>
 
@@ -100,11 +102,127 @@
             </div>
         </div>
         <div class="ui attached positive message">
-            博客信息
+<!--            博客信息-->
+            <div class="ui middle aligned grid">
+                <div class="eleven wide column">
+                   <ui class="list">
+                       <li>作者：崔诗东(联系作者)</li>
+                       <li>发表时间：2020-20-20</li>
+                       <li>版权声明：自由转载-非商用-非衍生-保持署名(创意共享3.0许可)</li>
+                       <li>公众号转载：请在文末添加作者二维码</li>
+                   </ui>
+                </div>
+
+                <div class="five wide column">
+                    <img src="/images/wechat.jpg" alt="" class="ui right floated rounded bordered image"
+                         style="width: 100px">
+                </div>
+            </div>
+
 
         </div>
         <div class="ui bottom attached segment">
-            留言区域
+<!--            留言区域列表-->
+            <div class="ui teal segment">
+                <div class="ui comments" bis_skin_checked="1">
+                    <h3 class="ui dividing header">Comments</h3>
+                    <div class="comment" bis_skin_checked="1">
+                        <a class="avatar">
+                            <img src="https://picsum.photos/id/1004/100/100">
+                        </a>
+                        <div class="content" bis_skin_checked="1">
+                            <a class="author">Matt</a>
+                            <div class="metadata" bis_skin_checked="1">
+                                <span class="date">Today at 5:42PM</span>
+                            </div>
+                            <div class="text" bis_skin_checked="1">
+                                How artistic!
+                            </div>
+                            <div class="actions" bis_skin_checked="1">
+                                <a class="reply">回复</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="comment" bis_skin_checked="1">
+                        <a class="avatar">
+                            <img src="https://picsum.photos/id/1000/100/100">
+                        </a>
+                        <div class="content" bis_skin_checked="1">
+                            <a class="author">Elliot Fu</a>
+                            <div class="metadata" bis_skin_checked="1">
+                                <span class="date">Yesterday at 12:30AM</span>
+                            </div>
+                            <div class="text" bis_skin_checked="1">
+                                <p>This has been very useful for my research. Thanks as well!</p>
+                            </div>
+                            <div class="actions" bis_skin_checked="1">
+                                <a class="reply">回复</a>
+                            </div>
+                        </div>
+                        <div class="comments" bis_skin_checked="1">
+                            <div class="comment" bis_skin_checked="1">
+                                <a class="avatar">
+                                    <img src="https://picsum.photos/id/1001/100/100">
+                                </a>
+                                <div class="content" bis_skin_checked="1">
+                                    <a class="author">Jenny Hess</a>
+                                    <div class="metadata" bis_skin_checked="1">
+                                        <span class="date">Just now</span>
+                                    </div>
+                                    <div class="text" bis_skin_checked="1">
+                                        Elliot you are always so right :)
+                                    </div>
+                                    <div class="actions" bis_skin_checked="1">
+                                        <a class="reply">回复</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="comment" bis_skin_checked="1">
+                        <a class="avatar">
+                            <img src="https://picsum.photos/id/1002/100/100">
+                        </a>
+                        <div class="content" bis_skin_checked="1">
+                            <a class="author">Joe Henderson</a>
+                            <div class="metadata" bis_skin_checked="1">
+                                <span class="date">5 days ago</span>
+                            </div>
+                            <div class="text" bis_skin_checked="1">
+                                Dude, this is awesome. Thanks so much
+                            </div>
+                            <div class="actions" bis_skin_checked="1">
+                                <a class="reply">回复</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="ui form">
+                <div class="field">
+                    <textarea name="content" placeholder="请输入评论信息....."></textarea>
+                </div>
+                <div class="fields">
+                    <div class="field m-mobile-wide m-margin-button-small">
+                        <div class="ui left icon input">
+                            <i class="user icon"></i>
+                            <input type="text" name="nickname" placeholder="姓名">
+
+                        </div>
+                    </div>
+                    <div class="field m-mobile-wide m-margin-button-small">
+                        <div class="ui left icon input">
+                            <i class="mail icon"></i>
+                            <input type="text" name="nickEmail" placeholder="邮箱">
+
+                        </div>
+                    </div>
+                    <div class="field m-mobile-wide m-margin-button-small">
+                        <button class="ui teal m-mobile-wide button"><i class="edit icon"></i>发布</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -112,44 +230,45 @@
 
 
 <!--底部footer-->
-    <footer class="ui inverted vertical segment m-padded-tb-big">
-        <div class="ui center aligned container">
-            <div class="ui inverted divided stackable grid">
-                <div class="three wide column">
-                    <div class="ui inverted link list">
-                        <div class="item">
-                            <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width:110px">
-                        </div>
+<footer class="ui inverted vertical segment m-padded-tb-big">
+    <div class="ui center aligned container">
+        <div class="ui inverted divided stackable grid">
+            <div class="three wide column">
+                <div class="ui inverted link list">
+                    <div class="item">
+                        <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width:110px">
                     </div>
-                </div>
-                <div class="three wide column">
-                    <h4 class="ui inverted header">最新博客</h4>
-                    <div class="ui inverted link list">
-                        <a href="javascript:;" class="item">用户故事(User Story)</a>
-                        <a href="javascript:;" class="item">热门话题</a>
-                        <a href="javascript:;" class="item">热门话题</a>
-                        <a href="javascript:;" class="item">热门话题</a>
-                    </div>
-
-                </div>
-                <div class="three wide column">
-                    <h4 class="ui inverted header">联系我们</h4>
-                    <div class="ui inverted link list">
-                        <a href="javascript:;" class="item">Email：3576419@vip.com</a>
-                        <a href="javascript:;" class="item">QQ：357776419</a>
-                        <a href="javascript:;" class="item">wechat：a520xdd</a>
-                    </div>
-                </div>
-                <div class="seven wide column">
-                    <h4 class="ui inverted header">Blog</h4>
-                    <p class="m-text-spaced m-padded-tb-big m-text-lined">这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这的人有所帮助0.0</p>
                 </div>
             </div>
-            <div class="ui inverted section divider"></div>
-            <p class="m-text-thin m-text-spaced">Copy Right©2019-2020 Blog Designed by Cuishidong</p>
-        </div>
+            <div class="three wide column">
+                <h4 class="ui inverted header">最新博客</h4>
+                <div class="ui inverted link list">
+                    <a href="javascript:;" class="item">用户故事(User Story)</a>
+                    <a href="javascript:;" class="item">热门话题</a>
+                    <a href="javascript:;" class="item">热门话题</a>
+                    <a href="javascript:;" class="item">热门话题</a>
+                </div>
 
-    </footer>
+            </div>
+            <div class="three wide column">
+                <h4 class="ui inverted header">联系我们</h4>
+                <div class="ui inverted link list">
+                    <a href="javascript:;" class="item">Email：3576419@vip.com</a>
+                    <a href="javascript:;" class="item">QQ：357776419</a>
+                    <a href="javascript:;" class="item">wechat：a520xdd</a>
+                </div>
+            </div>
+            <div class="seven wide column">
+                <h4 class="ui inverted header">Blog</h4>
+                <p class="m-text-spaced m-padded-tb-big m-text-lined">
+                    这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这的人有所帮助0.0</p>
+            </div>
+        </div>
+        <div class="ui inverted section divider"></div>
+        <p class="m-text-thin m-text-spaced">Copy Right©2019-2020 Blog Designed by Cuishidong</p>
+    </div>
+
+</footer>
 
 <script type="application/javascript" src="../webjars/jquery/3.5.1/dist/jquery.js"></script>
 <!--<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>-->
@@ -160,9 +279,9 @@
         $('.nav-item').toggleClass('m-mobile-hide')
     });
     $('#payButton').popup({
-        popup:$('.payQ.popup'),
+        popup: $('.payQ.popup'),
         on: 'click',
-        position:'bottom center'
+        position: 'bottom center'
     })
 </script>
 </body>
