--- a/src/main/resources/templates/blogDetails.html
+++ b/src/main/resources/templates/blogDetails.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../webjars/Semantic-UI/2.4.1/semantic.css">
     <link rel="stylesheet" href="/css/diy.css">
-    <title>首页</title>
+    <title>博客详情</title>
 </head>
 <body>
 <!--导航栏-->
