分类页面框架搭建完成

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,6 +35,7 @@
             <div class="ui stackable grid">
                 <!--       左边         -->
                 <div class="eleven wide stackable column">
+<!--                    header-->
                     <div class="ui top attached segment">
                         <div class="ui middle aligned two column grid">
                             <div class="column">
@@ -512,5 +513,6 @@
         $('.nav-item').toggleClass('m-mobile-hide')
     })
 </script>
+
 </body>
 </html>
