--- a/src/main/resources/static/css/diy.css
+++ b/src/main/resources/static/css/diy.css
@@ -96,6 +96,10 @@
     max-width: 72em !important;
     margin: auto !important;
 }
+.m-shadow-small{
+    -webkit-box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
+}
 .m-padded-lr-responsive{
     padding-left: 4em!important;
     padding-right: 4em!important;
@@ -108,9 +112,14 @@
         padding-left: 0!important;
         padding-right: 0!important;
     }
+    .m-mobile-clear{
+        padding-left: 0!important;
+        padding-right: 0!important;
+    }
     .m-mobile-wide{
         width: 100% !important;
     }
+
 }
 @media screen and (min-width: 769px){
     .m-pc-hide{
