--- a/src/main/resources/static/css/diy.css
+++ b/src/main/resources/static/css/diy.css
@@ -1,7 +1,9 @@
 .m-padded-tiny {
     padding: 0.2em !important;
 }
-
+.m-padded-mini{
+    padding: 0.3em!important;
+}
 .m-padded-tb-mini {
     padding-top: 0.2em !important;
     padding-bottom: 0.2em !important;
