--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -15,7 +15,8 @@
             <h2 class="ui teal header item">Blog</h2>
             <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="home icon"></i>首页</a>
             <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="idea icon"></i>分类</a>
-            <a href="javascript:;" class="active nav-item m-mobile-hide item"><i class="tags icon"></i>标签</a>
+            <a href="javascript:;" class=" nav-item m-mobile-hide item"><i class="tags icon"></i>标签</a>
+            <a href="javascript:;" class="active nav-item m-mobile-hide item"><i class="clone icon"></i>归档</a>
             <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="info icon"></i>关于我</a>
             <div class="right item m-mobile-hide">
                 <div class="ui icon inverted transparent input">
