完善博客管理页面集成markdown插件

--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -116,7 +116,7 @@
                                 下一页<i class="right chevron icon"></i>
                             </a>
                         </div>
-                        <a class="ui mini right floated teal button">新增</a>
+                        <a class="ui mini right floated green button">新增</a>
                     </th>
                 </tr>
             </tfoot>
