--- a/src/main/resources/static/css/diy.css
+++ b/src/main/resources/static/css/diy.css
@@ -4,6 +4,9 @@
 .m-padded-mini{
     padding: 0.3em!important;
 }
+.m-padded{
+    padding: 1.0em !important;
+}
 .m-padded-tb-mini {
     padding-top: 0.2em !important;
     padding-bottom: 0.2em !important;
@@ -87,6 +90,15 @@
     position: absolute;
     top: 0;
     right: 0;
+}
+
+.m-fixed{
+    position: fixed!important;
+    z-index: 10!important;
+}
+.m-right-bottom{
+    bottom: 0 !important;
+    right: 0!important;
 }
 
 /*display*/
