--- a/src/main/resources/static/css/diy.css
+++ b/src/main/resources/static/css/diy.css
@@ -82,6 +82,9 @@
 .m-margin-top {
     margin-top: 1.0em !important;
 }
+.m-margin-bottom {
+    margin-bottom: 1.0em !important;
+}
 .m-margin-top-large {
     margin-top: 2.0em !important;
 }
@@ -141,3 +144,4 @@
     }
 
 }
+
