实体类创建完成

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="_fragments ::head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../webjars/Semantic-UI/2.4.1/semantic.css">
+    <link rel="stylesheet" type="text/css" href="webjars/Semantic-UI/2.4.1/semantic.css">
     <link rel="stylesheet" href="/css/diy.css">
     <title>关于我</title>
 </head>
 <body>
 <!--导航栏-->
-<nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="_fragments ::menu(5)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui teal header item">Blog</h2>
             <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="home icon"></i>首页</a>
             <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="idea icon"></i>分类</a>
-            <a href="javascript:;" class=" nav-item m-mobile-hide item"><i class="tags icon"></i>标签</a>
-            <a href="javascript:;" class=" nav-item m-mobile-hide item"><i class="clone icon"></i>归档</a>
-            <a href="javascript:;" class="active nav-item m-mobile-hide item"><i class="info icon"></i>关于我</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="tags icon"></i>标签</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="clone icon"></i>归档</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="info icon"></i>关于我</a>
             <div class="right item m-mobile-hide">
                 <div class="ui icon inverted transparent input">
                     <input type="text" placeholder="Search...">
@@ -98,7 +98,7 @@
 
 
 <!--底部footer-->
-<footer class="ui inverted vertical segment m-padded-tb-big">
+<footer th:replace="_fragments ::footer" class="ui inverted vertical segment m-padded-tb-big">
     <div class="ui center aligned container">
         <div class="ui inverted divided stackable grid">
             <div class="three wide column">
@@ -138,10 +138,10 @@
 
 </footer>
 
-<script type="application/javascript" src="../webjars/jquery/3.5.1/dist/jquery.js"></script>
-<!--<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>-->
-<script type="application/javascript" src="../webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
-
+<!--/*/<th:block th:replace="_fragments ::script">/*/-->
+<script type="application/javascript" src="webjars/jquery/3.5.1/dist/jquery.js"></script>
+<script type="application/javascript" src="webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
+<!--/*/</th:block>/*/-->
 <script>
     $('#button').click(function () {
         $('.nav-item').toggleClass('m-mobile-hide')
