--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_fragments ::head(~{::title})">
+<head th:fragment="head(title)">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="webjars/Semantic-UI/2.4.1/semantic.css">
+    <link rel="stylesheet" type="text/css" href="webjars/animate.css/3.7.2/animate.css">
+    <link rel="stylesheet" type="text/css" href="webjars/prismjs/1.20.0/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="webjars/tocbot/dist/tocbot.css">
     <link rel="stylesheet" href="/css/diy.css">
-    <title>404</title>
+    <link rel="stylesheet" href="/css/typo.css">
+    <title th:replace="${title}">博客详情</title>
 </head>
 <body>
-<nav th:replace="_fragments ::menu(0)" class="ui inverted attached segment m-padded-tb-mini">
+<nav th:fragment="menu(n)" class="ui inverted attached segment m-padded-tb-mini">
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui teal header item">Blog</h2>
-            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="home icon"></i>首页</a>
-            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="idea icon"></i>分类</a>
-            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="tags icon"></i>标签</a>
-            <a href="javascript:;" class="nav-item m-mobile-hide item"><i class="info icon"></i>关于我</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item" th:classappend="${n==1} ? 'active'"><i class="home icon"></i>首页</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item" th:classappend="${n==2} ? 'active'"><i class="idea icon"></i>分类</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item" th:classappend="${n==3} ? 'active'"><i class="tags icon"></i>标签</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item" th:classappend="${n==4} ? 'active'"><i class="clone icon"></i>归档</a>
+            <a href="javascript:;" class="nav-item m-mobile-hide item" th:classappend="${n==5} ? 'active'"><i class="info icon"></i>关于我</a>
             <div class="right item m-mobile-hide">
                 <div class="ui icon inverted transparent input">
                     <input type="text" placeholder="Search...">
@@ -28,21 +33,9 @@
         <i class="sidebar icon"></i>
     </a>
 </nav>
-<br>
-<br>
-<br>
-<br>
-<div class="ui m-container m-padded-tb-maxsize">
-    <div class="ui error message m-padded-tb-maxsize">
-        <h2>404</h2>
-        <p>对不起，你访问的资源不存在</p>
-    </div>
-</div>
-<br>
-<br>
-<br>
-<br>
-<footer th:replace="_fragments ::footer" class="ui inverted vertical segment m-padded-tb-big">
+
+<!--底部footer-->
+<footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-big">
     <div class="ui center aligned container">
         <div class="ui inverted divided stackable grid">
             <div class="three wide column">
@@ -82,5 +75,14 @@
 
 </footer>
 
+<th:block th:fragment="script">
+    <script type="application/javascript" src="webjars/jquery/3.5.1/dist/jquery.js" th:src="@{webjars/jquery/3.5.1/dist/jquery.js}"></script>
+    <script type="application/javascript" src="webjars/Semantic-UI/2.4.1/semantic.min.js" th:src="@{webjars/Semantic-UI/2.4.1/semantic.min.js}"></script>
+    <script type="application/javascript" src="webjars/prismjs/1.20.0/prism.js" th:src="@{webjars/prismjs/1.20.0/prism.js}"></script>
+    <script type="application/javascript" src="webjars/tocbot/dist/tocbot.js" th:src="@{webjars/tocbot/dist/tocbot.js}"></script>
+    <script type="application/javascript" src="webjars/qrcodejs/1c78ccd/qrcode.js" th:src="@{webjars/qrcodejs/1c78ccd/qrcode.js}"></script>
+    <script type="application/javascript" src="webjars/jquery.scrollTo/2.1.1/jquery.scrollTo.js" th:src="@{webjars/jquery.scrollTo/2.1.1/jquery.scrollTo.js}"></script>
+    <script type="application/javascript" src="webjars/waypoints/lib/jquery.waypoints.js" th:src="@{webjars/waypoints/lib/jquery.waypoints.js}"></script>
+</th:block>
 </body>
 </html>
