实体类创建完成

--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="admin/_fragments ::head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../../webjars/Semantic-UI/2.4.1/semantic.css">
-    <link rel="stylesheet" href="../../webjars/editor.md/css/editormd.min.css">
-    <link rel="stylesheet" href="../../webjars/editor.md/lib/codemirror/codemirror.min.css">
-    <link rel="stylesheet" href="../css/diy.css">
+    <link rel="stylesheet" href="webjars/editor.md/css/editormd.min.css">
+    <link rel="stylesheet" href="webjars/editor.md/lib/codemirror/codemirror.min.css">
+    <link rel="stylesheet" href="css/diy.css">
     <title>博客管理</title>
 </head>
 <body>
 <!--导航栏-->
-<nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="admin/_fragments ::menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui teal header item">博客后台管理</h2>
@@ -221,12 +221,11 @@
     </div>
 
 </footer>
-
-<script type="application/javascript" src="../../webjars/jquery/3.5.1/dist/jquery.js"></script>
-<!--<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>-->
-<script type="application/javascript" src="../../webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
-<script type="application/javascript" src="../../webjars/editor.md/editormd.js"></script>
-
+<!--/*/<th:block th:replace="_fragments ::script">/*/-->
+<script type="application/javascript" src="webjars/jquery/3.5.1/dist/jquery.js"></script>
+<script type="application/javascript" src="webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
+<script type="application/javascript" src="webjars/editor.md/editormd.js"></script>
+<!--/*/</th:block>/*/-->
 <script>
     $('#button').click(function () {
         $('.nav-item').toggleClass('m-mobile-hide')
