--- a/src/main/resources/static/css/diy.css
+++ b/src/main/resources/static/css/diy.css
@@ -113,6 +113,10 @@
     max-width: 72em !important;
     margin: auto !important;
 }
+.m-container-small {
+    max-width: 60em !important;
+    margin: auto !important;
+}
 .m-shadow-small{
     -webkit-box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
