--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!--导航栏-->
-<nav th:replace="admin/_fragments ::menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="admin/_fragments ::menu(0)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui teal header item">博客后台管理</h2>
@@ -48,80 +48,13 @@
 <div class="m-container-small m-padded-tb-big ">
     <div class="ui container">
     <!--        header-->
-        <form action="javascript:;" method="post" class="ui segment form">
-            <div class="inline fields">
-                <div class="field">
-                    <input type="text" name="title" placeholder="标题">
-                </div>
-                <div class="field">
-                    <div class="ui selection dropdown">
-                        <input type="hidden" name="type" >
-                        <i class="dropdown icon"></i>
-                        <div class="default text">分类</div>
-                        <div class="menu">
-                            <div class="item" data-value="1">错误日志</div>
-                            <div class="item" data-value="2">开发手册</div>
-                            <div class="item" data-value="3">填坑锦集</div>
-                            <div class="item" data-value="4">...</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="ui checkbox">
-                        <input type="checkbox" id="recommend" name="recommend">
-                        <label for="recommend">推荐</label>
-                    </div>
-                </div>
-                <div class="field">
-                    <button class="ui mini teal basic button"><i class="search icon"></i>搜索</button>
-                </div>
-            </div>
-        </form>
-        <table class="ui celled table">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>标题</th>
-                    <th>类型</th>
-                    <th>推荐</th>
-                    <th>更新时间</th>
-                    <th>操作</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>刻意练习的清单</td>
-                    <td>认知升级</td>
-                    <td>是</td>
-                    <td>2020-02-20 13:20</td>
-                    <td>
-                        <a href="javascript:;" class="ui mini teal button">编辑</a>
-                        <a href="javascript:;" class="ui mini red button">删除</a>
-                    </td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <th colspan="6">
-                        <div class="ui mini pagination menu">
-                            <a class="icon item">
-                                <i class="left chevron icon"></i>上一页
-                            </a>
-<!--                            <a href="" class="item">1</a>-->
-<!--                            <a href="" class="item">2</a>-->
-<!--                            <a href="" class="item">3</a>-->
-<!--                            <a href="" class="item">4</a>-->
-                            <a class="icon item">
-                                下一页<i class="right chevron icon"></i>
-                            </a>
-                        </div>
-                        <a class="ui mini right floated green button">新增</a>
-                    </th>
-                </tr>
-            </tfoot>
-        </table>
+        <div class="ui success large message">
+            <h3>Hello,</h3>
+            <p>崔诗东，欢迎登录！</p>
+        </div>
+        <img src="https://picsum.photos/id/1001/1000/400" alt="" class="ui rounded bordered fluid image">
     </div>
+
 </div>
 
 
