--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -3,10 +3,10 @@
 <head th:replace="admin/_fragments ::head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../../webjars/Semantic-UI/2.4.1/semantic.css">
-    <link rel="stylesheet" href="webjars/editor.md/css/editormd.min.css">
-    <link rel="stylesheet" href="webjars/editor.md/lib/codemirror/codemirror.min.css">
-    <link rel="stylesheet" href="css/diy.css">
+    <link rel="stylesheet" type="text/css" href="/webjars/Semantic-UI/2.4.1/semantic.css">
+    <link rel="stylesheet" href="/webjars/editor.md/css/editormd.min.css">
+    <link rel="stylesheet" href="/webjars/editor.md/lib/codemirror/codemirror.min.css">
+    <link rel="stylesheet" href="/css/diy.css">
     <title>博客管理</title>
 </head>
 <body>
