--- a/src/main/resources/templates/admin/loginRoot.html
+++ b/src/main/resources/templates/admin/loginRoot.html
@@ -23,7 +23,7 @@
                             登录博客后台管理
                         </div>
                     </h2>
-                    <form class="ui large form" method="post" action="javascript:;" th:action="@{/admin/login}">
+                    <form class="ui large form" method="post" action="#" th:action="@{/admin/login}">
                         <div class="ui segment">
                             <div class="field">
                                 <div class="ui left icon input">
@@ -37,7 +37,7 @@
                                     <input type="password" name="password" placeholder="密码">
                                 </div>
                             </div>
-                            <div class="ui fluid large teal submit button">登录</div>
+                            <button class="ui fluid large teal submit button">登录</button>
                         </div>
 
                         <div class="ui error message"></div>
@@ -51,9 +51,9 @@
             </div>
         </div>
     </div>
-<!--/*/<th:block th:replace="_fragments ::script">/*/-->
-<script type="application/javascript" src="webjars/jquery/3.5.1/dist/jquery.js"></script>
-<script type="application/javascript" src="webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
+<!--/*/<th:block th:replace="admin/_fragments ::script">/*/-->
+<script type="application/javascript" src="/webjars/jquery/3.5.1/dist/jquery.js"></script>
+<script type="application/javascript" src="/webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
 <!--/*/</th:block>/*/-->
 
 </body>
